[Feature #160365600] Add javascript to link pages

--- a/UI/html/signupPage.html
+++ b/UI/html/signupPage.html
@@ -30,7 +30,7 @@
           <label for="email">Email:</label>
           <input type="email" id="email" placeholder="email">
           <button id="signup-button">Signup</button>
-          <button id="login">Login</button>
+          <button id="login-button">Login</button>
         </form>
       </div>
     </div>
