--- a/UI/html/signupPage.html
+++ b/UI/html/signupPage.html
@@ -22,15 +22,15 @@
       </div>
       <div id="signup-form">
         <h2>please signup</h2>
-        <form action="#">
+        <form>
           <label for="username">Username:</label>
           <input type="text" id="username" placeholder="username">
           <label for="password">Password:</label>
           <input type="password" id="password" placeholder="password">
           <label for="email">Email:</label>
           <input type="email" id="email" placeholder="email">
-          <button id="signup-button">Signup</button>
-          <button id="login-button">Login</button>
+          <button id="signup-button" type="submit">Signup</button>
+          <button id="login-button" type="button">Login</button>
         </form>
       </div>
     </div>
@@ -41,4 +41,5 @@
     </div>
   </footer>
 </body>
+<script src="../js/signupPage.js"></script>
 </html>
