[Chore #160365641] Improve UI of webpages

--- a/UI/html/aboutPage.html
+++ b/UI/html/aboutPage.html
@@ -95,12 +95,14 @@
     </section>
     <section>
       <div id="subscribe">
-        <div id="subscribe-text-container">
-          <h1>Subscribe to get latest dish we offer, offers and promos</h1>
-        </div>
-        <div id="subscribe-form-container">
-          <input type="email" placeholder="Enter email">
-          <button type="button">Subscribe</button>
+        <div id="sub-container">
+          <div id="subscribe-text-container">
+            <h1>Subscribe to get latest dish we offer, offers and promos</h1>
+          </div>
+          <div id="subscribe-form-container">
+            <input type="email" placeholder="Enter email">
+            <button type="button">Subscribe</button>
+          </div>
         </div>
       </div>
     </section>
