[Feature #160365615] Create an ordered meal card

--- a/UI/html/userProfile.html
+++ b/UI/html/userProfile.html
@@ -38,6 +38,38 @@
       <a href="./loginPage.html">Logout</a>
     </div>
   </header>
+  <main>
+    <section id="user-details">
+      <div id="user-contianer">
+        <div id="user-identify">
+          <img src="../images/user.jpeg" alt="user_pic">
+          <h2>John Doe</h2>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div id="user-actions">
+          <ul id="list-user-actions">
+            <li>Meals ordered <span id="meal-number">7</span></li>
+            <li>view meals ordered</li>
+            <li>edit profile</li>
+            <li>logout</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="meals-ordered-container">
+      <div id="meals-ordered">
+        <div class="meals">
+          <img src="../images/burger.jpeg" alt="meal">
+          <div class="meal-details">
+            <p><span class="meal-property">Meal: </span>Burger</p>
+            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   <script src="../js/profilePage.js"></script>
 </body>
 
