[Feature #160365615] Include pagination in profile page

--- a/UI/html/userProfile.html
+++ b/UI/html/userProfile.html
@@ -69,6 +69,21 @@
         </div>
       </div>
     </section>
+    <section id="paginate-section">
+      <div id="paginate">
+        <span class="page">1</span>
+        <span class="page">2</span>
+        <span class="page">3</span>
+        <span class="page">
+          <i class="fas fa-ellipsis-h"></i>
+        </span>
+        <span class="page">
+          <a href="#meals-ordered-container">
+            <i class="fas fa-chevron-up"></i>
+          </a>
+        </span>
+      </div>
+    </section>
   </main>
   <script src="../js/profilePage.js"></script>
 </body>
