[Feature #160365641] Add footer to profile-page

--- a/UI/html/userProfile.html
+++ b/UI/html/userProfile.html
@@ -153,6 +153,11 @@
       </div>
     </section>
   </main>
+  <footer>
+    <div id="footer">
+      <p>Designed by Hussain A.I &copy; 2018</p>
+    </div>
+  </footer>
   <script src="../js/profilePage.js"></script>
 </body>
 
