--- a/UI/html/mealsOrdered.html
+++ b/UI/html/mealsOrdered.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Order-Meal | Ordered Meals</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+  crossorigin="anonymous">
   <link rel="stylesheet" href="../css/mealsOrdered.css">
 </head>
+
 <body>
+  <header>
+    <nav>
+      <div id="logo">
+        <a href="./loginPage.html">O-Meal</a>
+      </div>
+    </nav>
+  </header>
+
+
   <script src="../js/mealsOrdered.js"></script>
 </body>
+
 </html>
