[Feature #160365631] Design ordered meal card

--- a/UI/html/mealsOrdered.html
+++ b/UI/html/mealsOrdered.html
@@ -39,15 +39,72 @@
       <div id="ordered-meal-text">
         <h3>ordered meals | 6 </h3>
       </div>
-      <div class="meal-card">
-        <div class="card-heading">
-          <h2><span class="meal-property">Customer: </span>Jane Doe</h2>
+      <div id="meal-card-container">
+        <div class="meal-cards">
+          <div class="card-heading">
+            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+          </div>
+          <div class="card-body">
+            <p><span class="meal-property">Meal: </span>Burger</p>
+            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
         </div>
-        <div class="card-body">
-          <p><span class="meal-property">Meal: </span>Burger</p>
-          <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-          <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-          <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+        <div class="meal-cards">
+          <div class="card-heading">
+            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+          </div>
+          <div class="card-body">
+            <p><span class="meal-property">Meal: </span>Burger</p>
+            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+        </div>
+        <div class="meal-cards">
+          <div class="card-heading">
+            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+          </div>
+          <div class="card-body">
+            <p><span class="meal-property">Meal: </span>Burger</p>
+            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+        </div>
+        <div class="meal-cards">
+          <div class="card-heading">
+            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+          </div>
+          <div class="card-body">
+            <p><span class="meal-property">Meal: </span>Burger</p>
+            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+        </div>
+        <div class="meal-cards">
+          <div class="card-heading">
+            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+          </div>
+          <div class="card-body">
+            <p><span class="meal-property">Meal: </span>Burger</p>
+            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+        </div>
+        <div class="meal-cards">
+          <div class="card-heading">
+            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+          </div>
+          <div class="card-body">
+            <p><span class="meal-property">Meal: </span>Burger</p>
+            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
         </div>
       </div>
     </div>
