[Feature #160365631] Add design for pagination

--- a/UI/html/mealsOrdered.html
+++ b/UI/html/mealsOrdered.html
@@ -109,6 +109,21 @@
       </div>
     </div>
   </section>
+  <section id="paginate-container">
+    <div id="paginate">
+      <span class="page">1</span>
+      <span class="page">2</span>
+      <span class="page">3</span>
+      <span class="page">
+        <i class="fas fa-ellipsis-h"></i>
+      </span>
+      <span class="page">
+        <a href="#ordered-meal-text">
+          <i class="fas fa-chevron-up"></i>
+        </a>
+      </span>
+    </div>
+  </section>
   <footer>
     <div id="footer">
       <p>Designed by Hussain A.I &copy; 2018</p>
