[Feature #160365631] Make admin accept, decline and mark an order as completed

--- a/UI/html/mealsOrdered.html
+++ b/UI/html/mealsOrdered.html
@@ -19,6 +19,13 @@
       </div>
     </nav>
   </header>
+  <section id="admin-actions">
+    <div class="container">
+      <div id="admin-action-contents">
+        <h3></h3>
+      </div>
+    </div>
+  </section>
   <section id="search-container">
     <div class="container">
       <div id="search-meal-container">
@@ -43,67 +50,97 @@
         <div class="meal-cards">
           <div class="card-heading">
             <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
           </div>
           <div class="card-body">
             <p><span class="meal-property">Meal: </span>Burger</p>
             <p><span class="meal-property">Quantity: </span>3 Pieces </p>
             <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
             <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+          <div class="card-footer">
+            <button class="accept">accept</button>
+            <button class="decline">decline</button>
           </div>
         </div>
         <div class="meal-cards">
           <div class="card-heading">
             <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
           </div>
           <div class="card-body">
             <p><span class="meal-property">Meal: </span>Burger</p>
             <p><span class="meal-property">Quantity: </span>3 Pieces </p>
             <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
             <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+          <div class="card-footer">
+            <button class="accept">accept</button>
+            <button class="decline">decline</button>
           </div>
         </div>
         <div class="meal-cards">
           <div class="card-heading">
             <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
           </div>
           <div class="card-body">
             <p><span class="meal-property">Meal: </span>Burger</p>
             <p><span class="meal-property">Quantity: </span>3 Pieces </p>
             <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
             <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+          <div class="card-footer">
+            <button class="accept">accept</button>
+            <button class="decline">decline</button>
           </div>
         </div>
         <div class="meal-cards">
           <div class="card-heading">
             <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
           </div>
           <div class="card-body">
             <p><span class="meal-property">Meal: </span>Burger</p>
             <p><span class="meal-property">Quantity: </span>3 Pieces </p>
             <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
             <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+          <div class="card-footer">
+            <button class="accept">accept</button>
+            <button class="decline">decline</button>
           </div>
         </div>
         <div class="meal-cards">
           <div class="card-heading">
             <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
           </div>
           <div class="card-body">
             <p><span class="meal-property">Meal: </span>Burger</p>
             <p><span class="meal-property">Quantity: </span>3 Pieces </p>
             <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
             <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+          <div class="card-footer">
+            <button class="accept">accept</button>
+            <button class="decline">decline</button>
           </div>
         </div>
         <div class="meal-cards">
           <div class="card-heading">
             <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
+            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
           </div>
           <div class="card-body">
             <p><span class="meal-property">Meal: </span>Burger</p>
             <p><span class="meal-property">Quantity: </span>3 Pieces </p>
             <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
             <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          </div>
+          <div class="card-footer">
+            <button class="accept">accept</button>
+            <button class="decline">decline</button>
           </div>
         </div>
       </div>
