[Chore #160365611] Add navigation to about page

--- a/UI/html/aboutPage.html
+++ b/UI/html/aboutPage.html
@@ -17,7 +17,24 @@
       <div id="logo">
         <a href="./loginPage.html">O-Meal</a>
       </div>
+      <div id="large-width-nav">
+        <a href="./userProfile.html">Profile</a>
+        <a href="./orderFoodPage.html">Order</a>
+        <a id="active" href="./aboutPage.html">About</a>
+        <a href="./loginPage.html">Logout</a>
+      </div>
+      <div id="nav-menu">
+        <span id="hamburger">
+          <i class="fas fa-bars fa-2x"></i>
+        </span>
+      </div>
     </nav>
+    <div id="small-width-nav">
+      <a href="./userProfile.html">Profile</a>
+      <a href="./orderFoodPage.html">Order</a>
+      <a href="./aboutPage.html">About</a>
+      <a href="./loginPage.html">Logout</a>
+    </div>
   </header>
   <main>
     <section>
@@ -149,6 +166,7 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
+  <script src="../js/aboutpage.js"></script>
 </body>
 
 </html>
