[Chore] Properly link pages together

--- a/UI/html/landingPage.html
+++ b/UI/html/landingPage.html
@@ -14,8 +14,8 @@
     <section>
       <div id="text-container">
         <div id="text">
-          <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-          <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, fugit!</h3>
+          <h1>Ordering food just got easier with O-meal</h1>
+          <h3>You order, We deliver on time, right to your door step!</h3>
         </div>
         <div id="button">
           <button id="get-started">get started</button>
