--- a/UI/html/loginPage.html
+++ b/UI/html/loginPage.html
@@ -18,20 +18,20 @@
     </nav>
   </header>
   <main>
-    <div id="form-container">
-      <div id="header-text">
-        <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-      </div>
-      <div id="login-form">
-        <h2>please login</h2>
-        <form>
-          <label for="username">Username:</label>
-          <input type="text" id="username" placeholder="username">
-          <label for="password">Password:</label>
-          <input type="password" id="password" placeholder="password">
-          <button id="login-button" type="submit">Login</button>
-          <button id="signup-button" type="button">Signup</button>
-        </form>
+    <div id="page-container">
+      <div id="form-container">
+        <div id="header-text">
+          <h1>welcome to the O-Meal app.</h1>
+        </div>
+        <div id="login-form">
+          <h2>please login</h2>
+          <form>
+            <input type="text" id="username" placeholder="username">
+            <input type="password" id="password" placeholder="password">
+            <button id="login-button" type="submit">Login</button>
+            <button id="signup-button" type="button">Signup</button>
+          </form>
+        </div>
       </div>
     </div>
   </main>
