--- a/UI/html/mealsOrdered.html
+++ b/UI/html/mealsOrdered.html
@@ -17,155 +17,164 @@
       <div id="logo">
         <a href="./loginPage.html">O-Meal</a>
       </div>
+      <div id="large-width-nav">
+        <a id="active" href="./mealsOrdered.html">Orders</a>
+        <a href="./availableOrders.html">Available Orders</a>
+      </div>
+      <div id="nav-menu">
+        <a id="logout" href="./loginPage.html">Logout</a>
+        <span id="hamburger">
+          <i class="fas fa-bars fa-2x"></i>
+        </span>
+      </div>
     </nav>
+    <div id="small-width-nav">
+      <a href="./mealsOrdered.html">Orders</a>
+      <a href="./availableOrders.html">Available Orders</a>
+    </div>
   </header>
-  <section id="admin-actions">
-    <div class="container">
-      <div id="admin-action-contents">
-        <h3></h3>
+  <main id="page-container">
+    <section id="search-container">
+      <div class="container">
+        <div id="search-meal-container">
+          <input type="text" id="seach-meal" placeholder="Search meal ordered">
+          <span id="search-meal-icon"><i class="fas fa-search"></i></span>
+          <select id="filter">
+            <option value="today">30 mins</option>
+            <option value="today">Last Hour</option>
+            <option value="today">Last 6 Hours</option>
+            <option value="today">Today</option>
+            <option value="yesterday">Yesterday</option>
+          </select>
+        </div>
       </div>
-    </div>
-  </section>
-  <section id="search-container">
-    <div class="container">
-      <div id="search-meal-container">
-        <input type="text" id="seach-meal" placeholder="Search meal ordered">
-        <span id="search-meal-icon"><i class="fas fa-search"></i></span>
-        <select id="filter">
-          <option value="today">30 mins</option>
-          <option value="today">Last Hour</option>
-          <option value="today">Last 6 Hours</option>
-          <option value="today">Today</option>
-          <option value="yesterday">Yesterday</option>
-        </select>
-      </div>
-    </div>
-  </section>
-  <section id="ordered-meals-container">
-    <div class="container">
-      <div id="ordered-meal-text">
-        <h3>ordered meals | 6 </h3>
-      </div>
-      <div id="meal-card-container">
-        <div class="meal-cards">
-          <div class="card-heading">
-            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
-            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
-          </div>
-          <div class="card-body">
-            <p><span class="meal-property">Meal: </span>Burger</p>
-            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
-          </div>
-          <div class="card-footer">
-            <button class="accept">accept</button>
-            <button class="decline">decline</button>
-          </div>
+    </section>
+    <section id="ordered-meals-container">
+      <div class="container">
+        <div id="ordered-meal-text">
+          <h3>ordered meals | 6 </h3>
         </div>
-        <div class="meal-cards">
-          <div class="card-heading">
-            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
-            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
+        <div id="meal-card-container">
+          <div class="meal-cards">
+            <div class="card-heading">
+              <h2><span class="meal-property">Customer: </span>Jane Doe</h2>
+              <span class="card-heading-icon"><i class="fas fa-check"></i></span>
+            </div>
+            <div class="card-body">
+              <p><span class="meal-property">Meal: </span>Burger</p>
+              <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+            </div>
+            <div class="card-footer">
+              <button class="accept">accept</button>
+              <button class="decline">decline</button>
+            </div>
           </div>
-          <div class="card-body">
-            <p><span class="meal-property">Meal: </span>Burger</p>
-            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          <div class="meal-cards">
+            <div class="card-heading">
+              <h2><span class="meal-property">Customer: </span>Jane Doe</h2>
+              <span class="card-heading-icon"><i class="fas fa-check"></i></span>
+            </div>
+            <div class="card-body">
+              <p><span class="meal-property">Meal: </span>Burger</p>
+              <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+            </div>
+            <div class="card-footer">
+              <button class="accept">accept</button>
+              <button class="decline">decline</button>
+            </div>
           </div>
-          <div class="card-footer">
-            <button class="accept">accept</button>
-            <button class="decline">decline</button>
+          <div class="meal-cards">
+            <div class="card-heading">
+              <h2><span class="meal-property">Customer: </span>Jane Doe</h2>
+              <span class="card-heading-icon"><i class="fas fa-check"></i></span>
+            </div>
+            <div class="card-body">
+              <p><span class="meal-property">Meal: </span>Burger</p>
+              <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+            </div>
+            <div class="card-footer">
+              <button class="accept">accept</button>
+              <button class="decline">decline</button>
+            </div>
           </div>
-        </div>
-        <div class="meal-cards">
-          <div class="card-heading">
-            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
-            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
+          <div class="meal-cards">
+            <div class="card-heading">
+              <h2><span class="meal-property">Customer: </span>Jane Doe</h2>
+              <span class="card-heading-icon"><i class="fas fa-check"></i></span>
+            </div>
+            <div class="card-body">
+              <p><span class="meal-property">Meal: </span>Burger</p>
+              <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+            </div>
+            <div class="card-footer">
+              <button class="accept">accept</button>
+              <button class="decline">decline</button>
+            </div>
           </div>
-          <div class="card-body">
-            <p><span class="meal-property">Meal: </span>Burger</p>
-            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+          <div class="meal-cards">
+            <div class="card-heading">
+              <h2><span class="meal-property">Customer: </span>Jane Doe</h2>
+              <span class="card-heading-icon"><i class="fas fa-check"></i></span>
+            </div>
+            <div class="card-body">
+              <p><span class="meal-property">Meal: </span>Burger</p>
+              <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+            </div>
+            <div class="card-footer">
+              <button class="accept">accept</button>
+              <button class="decline">decline</button>
+            </div>
           </div>
-          <div class="card-footer">
-            <button class="accept">accept</button>
-            <button class="decline">decline</button>
-          </div>
-        </div>
-        <div class="meal-cards">
-          <div class="card-heading">
-            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
-            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
-          </div>
-          <div class="card-body">
-            <p><span class="meal-property">Meal: </span>Burger</p>
-            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
-          </div>
-          <div class="card-footer">
-            <button class="accept">accept</button>
-            <button class="decline">decline</button>
-          </div>
-        </div>
-        <div class="meal-cards">
-          <div class="card-heading">
-            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
-            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
-          </div>
-          <div class="card-body">
-            <p><span class="meal-property">Meal: </span>Burger</p>
-            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
-          </div>
-          <div class="card-footer">
-            <button class="accept">accept</button>
-            <button class="decline">decline</button>
-          </div>
-        </div>
-        <div class="meal-cards">
-          <div class="card-heading">
-            <h2><span class="meal-property">Customer : </span>Jane Doe</h2>
-            <span class="card-heading-icon"><i class="fas fa-check"></i></span>
-          </div>
-          <div class="card-body">
-            <p><span class="meal-property">Meal: </span>Burger</p>
-            <p><span class="meal-property">Quantity: </span>3 Pieces </p>
-            <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
-            <p><span class="meal-property">Prize: </span>&#8358; 300</p>
-          </div>
-          <div class="card-footer">
-            <button class="accept">accept</button>
-            <button class="decline">decline</button>
+          <div class="meal-cards">
+            <div class="card-heading">
+              <h2><span class="meal-property">Customer: </span>Jane Doe</h2>
+              <span class="card-heading-icon"><i class="fas fa-check"></i></span>
+            </div>
+            <div class="card-body">
+              <p><span class="meal-property">Meal: </span>Burger</p>
+              <p><span class="meal-property">Quantity: </span>3 Pieces </p>
+              <p><span class="meal-property">Drink: </span>Coca-Cola 50cl</p>
+              <p><span class="meal-property">Prize: </span>&#8358; 300</p>
+            </div>
+            <div class="card-footer">
+              <button class="accept">accept</button>
+              <button class="decline">decline</button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section id="paginate-container">
-    <div id="paginate">
-      <span class="page">1</span>
-      <span class="page">2</span>
-      <span class="page">3</span>
-      <span class="page">
-        <i class="fas fa-ellipsis-h"></i>
-      </span>
-      <span class="page">
-        <a href="#ordered-meal-text">
-          <i class="fas fa-chevron-up"></i>
-        </a>
-      </span>
-    </div>
-  </section>
-  <footer>
-    <div id="footer">
-      <p>Designed by Hussain A.I &copy; 2018</p>
-    </div>
-  </footer>
+    </section>
+    <section id="paginate-container">
+      <div id="paginate">
+        <span class="page">1</span>
+        <span class="page">2</span>
+        <span class="page">3</span>
+        <span class="page">
+          <i class="fas fa-ellipsis-h"></i>
+        </span>
+        <span class="page">
+          <a href="#ordered-meal-text">
+            <i class="fas fa-chevron-up"></i>
+          </a>
+        </span>
+      </div>
+    </section>
+    <footer>
+      <div id="footer">
+        <p>Designed by Hussain A.I &copy; 2018</p>
+      </div>
+    </footer>
+  </main>
   <script src="../js/mealsOrdered.js"></script>
 </body>
 
