--- a/UI/html/signupPage.html
+++ b/UI/html/signupPage.html
@@ -18,22 +18,21 @@
     </nav>
   </header>
   <main>
-    <div id="form-container">
-      <div id="header-text">
-        <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-      </div>
-      <div id="signup-form">
-        <h2>please signup</h2>
-        <form>
-          <label for="username">Username:</label>
-          <input type="text" id="username" placeholder="username">
-          <label for="password">Password:</label>
-          <input type="password" id="password" placeholder="password">
-          <label for="email">Email:</label>
-          <input type="email" id="email" placeholder="email">
-          <button id="signup-button" type="submit">Signup</button>
-          <button id="login-button" type="button">Login</button>
-        </form>
+    <div id="page-contaniner">
+      <div id="form-container">
+        <div id="header-text">
+          <h1>Welcome to the O-meal App.</h1>
+        </div>
+        <div id="signup-form">
+          <h2>please signup</h2>
+          <form>
+            <input type="text" id="username" placeholder="username">
+            <input type="password" id="password" placeholder="password">
+            <input type="email" id="email" placeholder="email">
+            <button id="signup-button" type="submit">Signup</button>
+            <button id="login-button" type="button">Login</button>
+          </form>
+        </div>
       </div>
     </div>
   </main>
