[Chore #160365600] Implement feedback on signup page

--- a/UI/html/signupPage.html
+++ b/UI/html/signupPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <title>Order-Meal | Signup Page</title>
   <link rel="stylesheet" href="../css/signupPage.css">
 </head>
+
 <body>
   <header>
     <nav>
@@ -16,22 +18,21 @@
     </nav>
   </header>
   <main>
-    <div id="form-container">
-      <div id="header-text">
-        <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-      </div>
-      <div id="signup-form">
-        <h2>please signup</h2>
-        <form>
-          <label for="username">Username:</label>
-          <input type="text" id="username" placeholder="username">
-          <label for="password">Password:</label>
-          <input type="password" id="password" placeholder="password">
-          <label for="email">Email:</label>
-          <input type="email" id="email" placeholder="email">
-          <button id="signup-button" type="submit">Signup</button>
-          <button id="login-button" type="button">Login</button>
-        </form>
+    <div id="page-contaniner">
+      <div id="form-container">
+        <div id="header-text">
+          <h1>Welcome to the O-meal App.</h1>
+        </div>
+        <div id="signup-form">
+          <h2>please signup</h2>
+          <form>
+            <input type="text" id="username" placeholder="username">
+            <input type="password" id="password" placeholder="password">
+            <input type="email" id="email" placeholder="email">
+            <button id="signup-button" type="submit">Signup</button>
+            <button id="login-button" type="button">Login</button>
+          </form>
+        </div>
       </div>
     </div>
   </main>
@@ -42,4 +43,5 @@
   </footer>
 </body>
 <script src="../js/signupPage.js"></script>
+
 </html>
