improve UI on about page

--- a/UI/html/userProfile.html
+++ b/UI/html/userProfile.html
@@ -18,8 +18,8 @@
         <a href="./loginPage.html">O-Meal</a>
       </div>
       <div id="large-width-nav">
-        <a href="./userProfile.html">Profile</a>
-        <a id="active" href="./orderFoodPage.html">Order</a>
+        <a  id="active" href="./userProfile.html">Profile</a>
+        <a href="./orderFoodPage.html">Order</a>
         <a href="./aboutPage.html">About</a>
       </div>
       <div id="nav-menu">
