[Feature #160611286] Add navigation to meals-ordered page

--- a/UI/html/mealsOrdered.html
+++ b/UI/html/mealsOrdered.html
@@ -17,7 +17,21 @@
       <div id="logo">
         <a href="./loginPage.html">O-Meal</a>
       </div>
+      <div id="large-width-nav">
+        <a id="active" href="./mealsOrdered.html">Orders</a>
+        <a href="./availableOrders.html">Available Orders</a>
+      </div>
+      <div id="nav-menu">
+        <a id="logout" href="./loginPage.html">Logout</a>
+        <span id="hamburger">
+          <i class="fas fa-bars fa-2x"></i>
+        </span>
+      </div>
     </nav>
+    <div id="small-width-nav">
+      <a href="./mealsOrdered.html">Orders</a>
+      <a href="./availableOrders.html">Available Orders</a>
+    </div>
   </header>
   <main id="page-container">
     <section id="search-container">
