[Feature #160611286] Include modal for creating a meal

--- a/UI/html/availableOrders.html
+++ b/UI/html/availableOrders.html
@@ -153,6 +153,20 @@
         </span>
       </div>
     </section>
+    <section id="addOrder-modal-container">
+      <div id="modal-container">
+        <div id="modal-content">
+          <div id="close-container">
+            <span id="close-modal">&times;</span>
+          </div>
+          <input type="text" name="" id="modal-meal-type" placeholder="meal type">
+          <input type="text" name="" id="modal-meal" placeholder="meal">
+          <input type="text" name="" id="modal-prize" placeholder="prize">
+          <button id='create-meal'>Create meal</button>
+          <button id='cancel-meal'>Cancel creation</button>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
     <div id="footer">
