--- a/client/html/signupPage.html
+++ b/client/html/signupPage.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Order-Meal | Signup Page</title>
-  <link rel="stylesheet" href="../css/signupPage.css">
+  <link rel="stylesheet" href="./asset/signupPage.css">
 </head>
 
 <body>
