--- a/client/html/loginPage.html
+++ b/client/html/loginPage.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Order-Meal | Login Page</title>
-  <link rel="stylesheet" href="../css/loginPage.css">
+  <link rel="stylesheet" href="./asset/loginPage.css">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
-  <script src="../js/loginPage.js"></script>
+  <script src="./js/loginPage.js"></script>
 </body>
 
 </html>
