--- a/client/html/userProfile.html
+++ b/client/html/userProfile.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Order-Meal | User-Profile page</title>
+  <script src="./js/checkToken.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="./asset/userProfile.css">
@@ -33,7 +34,7 @@
       <a href="./userProfile.html">Profile</a>
       <a href="./orderFoodPage.html">Order</a>
       <a href="./aboutPage.html">About</a>
-      <a href="./loginPage.html">Logout</a>
+      <a id="logout" href="./loginPage.html">Logout</a>
     </div>
   </header>
   <main>
