[Feature #160955531]Make webpages protected
- Logout a user
- Prevent unauthorized users from accessing protected webpages

--- a/client/html/loginPage.html
+++ b/client/html/loginPage.html
@@ -34,7 +34,7 @@
             <input type="text" id="username" placeholder="username">
             <input type="password" id="password" placeholder="password">
             <button id="login-button" type="submit">Login</button>
-            <button id="signup-button" type="button">Signup</button>
+            <h3 id="signup">Don't have an account? <a href="./signupPage.html">Signup</a></h3>
           </form>
         </div>
       </div>
