--- a/client/html/signupPage.html
+++ b/client/html/signupPage.html
@@ -35,7 +35,7 @@
             <input type="password" id="password" placeholder="password">
             <input type="email" id="email" placeholder="email">
             <button id="signup-button" type="submit">Signup</button>
-            <button id="login-button" type="button">Login</button>
+            <h3 id="login">Do you an account? <a href="./loginPage.html">Login</a></h3>
           </form>
         </div>
       </div>
