[Feature #160887554]Power get-menu page from back-end

--- a/client/html/loginPage.html
+++ b/client/html/loginPage.html
@@ -25,7 +25,7 @@
         </div>
         <div id="success-error-response">
           <div id="response-container">
-            <p>an error occurred</p>
+            <p>An error occurred</p>
           </div>
         </div>
         <div id="login-form">
