--- a/client/html/availableOrders.html
+++ b/client/html/availableOrders.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="./asset/availableOrders.css">
+  <link rel="stylesheet" href="../css/availableOrders.css">
 </head>
 
 <body>
@@ -16,6 +17,9 @@
     <nav>
       <div id="logo">
         <a href="./loginPage.html">O-Meal</a>
+      </div>
+      <div id="nav-menu">
+        <a id="logout" href="./loginPage.html"></a>
       </div>
     </nav>
   </header>
@@ -29,7 +33,7 @@
             <option value="">fiter searh</option>
             <option value="Meal">Meal</option>
             <option value="Appetizer">Appetizer</option>
-            <option value="Drnk">Refreshment</option>
+            <option value="Drink">Refreshment</option>
             <option value="Snacks">Snacks</option>
             <option value="Desert">Desert</option>
           </select>
@@ -97,7 +101,7 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
-  <script src="./js/availableOrders.js"></script>
+  <script src="../js/availableOrders.js"></script>
 </body>
 
 </html>
