[Chore #160887262] Implement feedback on front-end
- Give functions more descritive names
- Prevent registered users from viewing login and signup page
- Improve the user experience of the app
- Remove only the token when the user logges out

--- a/client/html/userProfile.html
+++ b/client/html/userProfile.html
@@ -20,7 +20,7 @@
       </div>
       <div id="large-width-nav">
         <a  id="active" href="./userProfile.html">Profile</a>
-        <a href="./orderFoodPage.html">Order</a>
+        <a href="./availableOrders.html">Order</a>
         <a href="./aboutPage.html">About</a>
       </div>
       <div id="nav-menu">
@@ -32,7 +32,7 @@
     </nav>
     <div id="small-width-nav">
       <a href="./userProfile.html">Profile</a>
-      <a href="./orderFoodPage.html">Order</a>
+      <a href="./availableOrders.html">Order</a>
       <a href="./aboutPage.html">About</a>
       <a id="logout" href="./loginPage.html">Logout</a>
     </div>
@@ -44,8 +44,8 @@
           <div id="user-identify">
             <img src="./images/user.jpg" alt="user_pic">
             <div id="user-identify-text">
-              <h2>Jane Doe</h2>
-              <p>Lorem ipsum dolor sit amet.</p>
+              <h2></h2>
+              <p></p>
             </div>
           </div>
           <div id="user-actions">
@@ -114,6 +114,7 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
+  <script src="./js/helper.js"></script>
   <script src="./js/profilePage.js"></script>
 </body>
 
