--- a/client/html/availableOrders.html
+++ b/client/html/availableOrders.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="./asset/availableOrders.css">
-  <link rel="stylesheet" href="../css/availableOrders.css">
 </head>
 
 <body>
@@ -101,7 +100,8 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
-  <script src="../js/availableOrders.js"></script>
+  <script src="./js/helper.js"></script>
+  <script src="./js/availableOrders.js"></script>
 </body>
 
 </html>
