--- a/client/html/loginPage.html
+++ b/client/html/loginPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="../js/checkToken.js"></script>
+  <script src="./js/checkIfNotReg.js"></script>
   <title>Order-Meal | Login Page</title>
   <link rel="stylesheet" href="./asset/loginPage.css">
 </head>
@@ -46,6 +46,7 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
+  <script src="./js/helper.js"></script>
   <script src="./js/loginPage.js"></script>
 </body>
 
