--- a/client/html/loginPage.html
+++ b/client/html/loginPage.html
@@ -46,6 +46,7 @@
       <p>Designed by Hussain A.I &copy; 2018</p>
     </div>
   </footer>
+  <script src="./js/helper.js"></script>
   <script src="./js/loginPage.js"></script>
 </body>
 
